<resources>
    <string name="app_name">Japan Quake Ready</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="near_the">Near the</string>
    <string name="no_earthquakes">No earthquakes found.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Earthquake Settings</string>
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">3</string>
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>
    <string name="title_activity_earthquake_steps">EarthquakeSteps</string>
    <string name="settings_number_of_days_label">Number of days to display(Max 20 years)</string>
    <string name="settings_number_of_days_key">number_of_months</string>
    <string name="settings_number_of_days_default">30</string>
    <string name="settings_notifications">Enable Notifications</string>
    <string name="settings_tutorial">Enable Intro Tutorial</string>
    <string name="settings_tutorial_default">true</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_key">language</string>
    <string name="settings_language_label">language</string>
    <string name="slide1_title">Earthquakes in Japan</string>
    <string name="slide1_text">A reference app to help you when visiting Japan.</string>
    <string name="slide2_title">View Past Earthquakes</string>
    <string name="slide2_text">Listed in order of magnitude or location. See up to 20 years into the past!</string>
    <string name="slide3_title">Earthquake data</string>
    <string name="slide3_text">View the location of earthquakes on google maps or share with others.</string>
    <string name="slide4_title">Earthquake Preparation Guide</string>
    <string name="slide4_text">How can you prepare yourself? What can you do in the event of an earthquake?</string>
    <string name="title_activity_slideshowone">Prepare</string>
    <string name="show1_slide1_title">Start stockpiling</string>
    <string name="show1_slide1_text"></string>
    <string name="show1_slide2_title">Keep valuables together</string>
    <string name="show1_slide2_text"></string>
    <string name="show1_slide3_title">Prepare an emergency bag</string>
    <string name="show1_slide3_text"></string>
    <string name="show1_slide4_title">Confirm the safety of your rooms</string>
    <string name="show1_slide4_text"></string>
    <string name="show1_slide5_title">Prevent furniture, etc. from falling over</string>
    <string name="show1_slide5_text"></string>
    <string name="show1_slide6_title">Confirm where to evacuate</string>
    <string name="show1_slide6_text"></string>
    <string name="show1_slide7_title">Sign up for disaster information services</string>
    <string name="show1_slide7_text"></string>
    <string name="show1_slide8_title">Check for seismic resistance</string>
    <string name="show1_slide8_text"></string>
    <string name="show1_slide9_title">Hold a family meeting</string>
    <string name="show1_slide9_text"></string>
    <string name="show1_slide10_title">Participate in fire and disaster drills</string>
    <string name="show1_slide10_text"></string>
    <string name="title_activity_slideshowtwo">Slide Show 2</string>
    <string name="show2_slide1_title">LivingRoom</string>
    <string name="show2_slide1_text">You must be careful about being trapped under tall furniture that has toppled over, or injured by broken glass. If you feel a tremor, take cover in a place where you will be protected from falling objects or furniture. </string>
    <string name="show2_slide2_title">Kitchen</string>
    <string name="show2_slide2_text">Watch out for things like large, heavy kitchen appliances such as refrigerators and microwave ovens, as well as items flying out of shelves. Wear footgear to protect your feet. Secure an exit by opening the door. First protect yourself, and then after the shaking stops, calmly turn off the flame.</string>
    <string name="show2_slide3_title">Bedroom</string>
    <string name="show2_slide3_text">Protect your head with items such as a pillow or bed quilt, and move to a place where floor lamps or dressing tables will not topple over on you. If you make it a habit to put your glasses in an eyeglass case when you go to sleep.</string>
    <string name="show2_slide4_title">Bedroom(cont\'d)</string>
    <string name="show2_slide4_text">After the tremor subsides, put on thick-soled slippers and open the door to secure an exit. Have a flashlight ready for a possible power failure, so that you can move safely even in the dark. </string>
    <string name="show2_slide5_title">Second floor </string>
    <string name="show2_slide5_text">The first floor of an old structure could collapse and crush you, so don’t rush to the first floor. If you are in a building that does not meet the earthquake resistance standards, decide whether you should escape outside according to the situation.</string>
    <string name="show2_slide6_title">Toilet</string>
    <string name="show2_slide6_text">You might get trapped inside, so open the door when you feel a tremor. If possible, move to a safer place, such as the hallway or front entrance, so that you can quickly evacuate.</string>
    <string name="show2_slide7_title">Bathroom</string>
    <string name="show2_slide7_text">The bathroom is a place where you can easily get injured because you aren’t wearing any clothing to protect you. Cover your head with a washing basin or something to protect yourself from the shattered glass of the mirror or light bulb, and quickly get out of the bathroom and move to a safe place.</string>
    <string name="show2_slide8_title">Shards of glass and other dangerous items on the floor</string>
    <string name="show2_slide8_text">If you step on shattered glass, broken pieces of ceramic or other materials on the floor, you could be injured and become unable to walk. Put on thick-soled slippers and move to a safer place.</string>
    <string name="show2_slide9_title">If trapped </string>
    <string name="show2_slide9_text">If you are trapped inside a room or unable to move, don’t keep on shouting as this could exhaust you and endanger your life. Instead, make large noises by, for instance, using something solid to hit the door or walls to let others realize that you are in the room.</string>
    <string name="title_activity_slideshowthree">Slide Show 3</string>
    <string name="show3_slide1_title">At the Office</string>
    <string name="show3_slide1_text">Copy machines and other office furnishings on casters that have not been locked can move around the room in an unpredictable manner. You could be severely injured if you are hit by one. You could even be killed if you are hit in the head by objects such as shards of broken glass.</string>
    <string name="show3_slide2_title">At the Office(cont\'d)</string>
    <string name="show3_slide2_text"> While being careful of falling cabinets and shattered glass, you need to move to a safe place to protect yourself from falling objects or furniture and other heavy items toppling over or sliding into you.Once the shaking has subsided and you are ready to evacuate.</string>
    <string name="show3_slide3_title">At the Office(cont\'d 2)</string>
    <string name="show3_slide3_text">Be sure to use the stairs because elevators could shut down from aftershocks and power failures. Highrise buildings shake for a longer period of time, and the higher you are in a building, the more pronounced the shaking. Quickly find a safe place to take cover and wait for the shaking to stop.</string>
    <string name="show3_slide4_title">Business and shopping districts</string>
    <string name="show3_slide4_text">Protect yourself from falling objects and debris, watch out for collapsing buildings, move to a safe place such as a park. Or take refuge in a relatively new, reinforced concrete building that is seismic resistant. Remain calm.</string>
    <string name="show3_slide5_title">Schools </string>
    <string name="show3_slide5_text">Move away from windows, take cover under a desk, hold on to the desk’s legs, and wait until the shaking subsides. If you’re in the hall, quickly move away from windows, and on the stairs, grab hold of the railing to avoid losing your balance and falling.</string>
    <string name="show3_slide6_title">Train stations</string>
    <string name="show3_slide6_text">Protect yourself from falling objects and move to the nearest column so you don’t fall off the platform. If the platform is too crowded to move around, crouch down and wait for the shaking to subside. In subway stations, there is the danger of panic breaking out with people rushing to get above ground. Never go on to the tracks. </string>
    <string name="show3_slide7_title">Inside the train</string>
    <string name="show3_slide7_text">Trains will make an emergency stop when strong shaking is detected. Use your bag or something similar to protect your head. If standing, protect yourself by crouching to the ground. In a crowded train, firmly grab a handrail or strap, and keep your feet firmly planted on the ground. </string>
    <string name="show3_slide8_title">In the car</string>
    <string name="show3_slide8_text">Suddenly lowering your speed could cause a collision. Turn on your hazard lights and gradually slow down. Stop your car on the left side of the road, turn off the engine, and wait for the shaking to stop. Move to a parking lot or open area if possible.</string>
    <string name="show3_slide9_title">Expressways</string>
    <string name="show3_slide9_text">To avoid colliding with other vehicles, gradually reduce speed and bring the car to a stop on the left side of the road. There’s the possibility that the expressway will be closed. Confirm the situation over your car radio or other means.</string>
    <string name="show3_slide10_title">Tunnels</string>
    <string name="show3_slide10_text">As there is the danger of ceiling or wall collapse, if you are able to see the tunnel exit ahead, leave the tunnel at a reduced speed. If you are in a very long tunnel, pull over to the left hand side and stop the car. Leave the keys in the car and evacuate from the tunnel using the emergency exit.</string>
    <string name="show3_slide11_title">Bridges and overpasses</string>
    <string name="show3_slide11_text">Since old bridges could collapse, if you were about to finish crossing the bridge, reduce your speed and complete the crossing. Since every bridge and overpass shakes in a different way, gradually slow down, pull over to the left side of the road, and stop the car.</string>
    <string name="show3_slide12_title">Traffic restrictions on disaster response routes</string>
    <string name="show3_slide12_text">Disaster response routes are roads designated for the smooth passage of emergency vehicles directly following an earthquake. Become familiar with traffic restrictions that will take effect when a major earthquake strikes.</string>
    <string name="show3_slide13_title">Department stores, supermarkets, convenience stores</string>
</resources>